Fix client image alignment; adjust section heights

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,6 +30,7 @@ h1, h2, h3, h4,
 .section,
 #client-testimonials {
     width: 100%;
+    min-height: 29.4rem;
     display: flex;
 }
 
@@ -42,7 +43,6 @@ h1, h2, h3, h4,
 .section-text,
 .subsection {
     display: flex;
-    height: auto;
 }
 
 .logo {
@@ -153,7 +153,6 @@ h1, h2, h3, h4,
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    min-height: 29.4rem;
     padding: 3rem;
     background-position: center;
     background-size: cover;
@@ -188,24 +187,27 @@ h1, h2, h3, h4,
 
 /* Client Testimonials */
 
-#client-testimonials {
+.testimonial-section {
     background-color: var(--white);
+}
+
+.testimonial-section,
+.client-quote  {
+    flex-direction: column;
 }
 
 .article-wrapper {
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
-    
-#client-testimonials,
+
+.testimonial-section,
+.article-wrapper,
 .client-quote {
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.client-h3 {
+.testimonial-section h3 {
     text-transform: uppercase;
     letter-spacing: 0.25rem;
     color: var(--grayish-blue);
@@ -217,8 +219,10 @@ h1, h2, h3, h4,
     color: var(--verydark-grayish-blue);
 }
 
-.client-avatar {
+.client-image {
+    margin: 0 auto;
     border-radius: 50%;
+    width: 4rem;
 }
 
 .client-h4 {
@@ -231,6 +235,10 @@ h1, h2, h3, h4,
 
 /* Gallery Section */
 
+#gallery-section {
+    min-height: auto;
+}
+
 .gallery-image {
     width: 25%;
 }
@@ -242,17 +250,26 @@ h1, h2, h3, h4,
     align-items: center;
     background-color: var(--light-mod-cyan);
     color: var(--dark-mod-cyan);
+    min-height: 12rem;
 }
 
-.footer-logo,
-.footer-nav,
-.footer-social {
+.footer-logo {
     margin: 2rem;
 }
 
+.footer-nav,
 .footer-social {
+    margin: 1rem;
     display: flex;
     justify-content: center;
+}
+
+.footernav-link {
+    margin: 0 1.25rem;
+}
+
+.social-icon {
+    margin: 1.5rem 0.5rem;
 }
 
 /* Attribution */
